@@ -1,3 +1,8 @@
+2000-07-13  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* tests/tlsIO.test: enabled tests 2.10, 7.[1245] (there is no 3),
+	which now pass.  Added some comments to other failing tests.
+
 2000-07-11  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* tlsIO.c: changed all the channel procs to start with Tls* for
